--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "IWP",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/AritriBasu/SmartStart#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express-handlebars": "^5.3.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7"
   }
 }
