--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "fs": "0.0.1-security",
+    "googleapis": "^74.2.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "uuid": "^8.3.2"
   }
